--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -50,8 +50,8 @@
     		        <nav id="param_nav">
     		        	<ul>
     		        		{% block param %}
-    		        		    <li><a href="{{ path('fos_user_change_password') }}">Change your password</a></li>
-    		        		    <li><a href="{{ path('fos_user_profile_edit') }}">Edit your profile</a></li>
+    		        		    <li><a href="{{ path('fos_user_change_password') }}">Change my password</a></li>
+    		        		    <li><a href="{{ path('fos_user_profile_edit') }}">Edit my profile</a></li>
     		        		    <li><a href="{{ path('fos_user_security_logout') }}">Sign out</a></li>
     						{% endblock %}
     		        	</ul>
