--- a/web/sass/user.scss
+++ b/web/sass/user.scss
@@ -3,7 +3,8 @@
     &.login,
     &.profile,
     &.changePassword,
-    &.register {
+    &.register,
+    &.unit {
         
         #container {
             
