--- a/app/Resources/views/adminGlobal.html.twig
+++ b/app/Resources/views/adminGlobal.html.twig
@@ -9,6 +9,8 @@
 {% block param %}
     <li><a href="{{ path('fos_user_registration_register') }}">Register a user</a></li>
     <li><a href="{{ path('gospelcenterPageGlobal_home') }}">Back to website</a></li>
+    <li class="line"></li>
+    {{ parent() }}
 {% endblock %}
 
 {% block body %}
@@ -25,6 +27,7 @@
     <li><a href="{{ path('gospelcenterAdminGlobal_pages') }}" {% if page == 'pages' %}class="current"{% endif %}>Pages</a></li>
     <li><a href="{{ path('gospelcenterAdminGlobal_images') }}" {% if page == 'images' %}class="current"{% endif %}>Images</a></li>
     <li><a href="{{ path('gospelcenterAdminGlobal_centers') }}" {% if page == 'centers' %}class="current"{% endif %}>Centers</a></li>
+    <li><a href="{{ path('gospelcenterAdminGlobal_options') }}" {% if page == 'options' %}class="current"{% endif %}>Options</a></li>
 {% endblock %}
 
 {% block jsTemplating %}
