--- a/src/gospelcenter/UserBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/UserBundle/Resources/views/layout.html.twig
@@ -5,6 +5,13 @@
 	<link rel="stylesheet" href="{{ asset('css/layout.css') }}" type="text/css" />
 {% endblock %}
 
+{% block param %}
+    <li><a href="{{ path('fos_user_registration_register') }}">Register a user</a></li>
+    <li><a href="{{ path('gospelcenterAdminGlobal_pages') }}">Dashboard</a></li>
+    <li class="line"></li>
+    {{ parent() }}
+{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
 {% endblock %}
