--- a/app/Resources/views/layoutNew.html.twig
+++ b/app/Resources/views/layoutNew.html.twig
@@ -5,8 +5,9 @@
     <title>{% block title %}Gospel Center{% endblock %}</title>
     <meta name="viewport"
           content="initial-scale=1, minimum-scale=1, user-scalable=no, maximum-scale=1, width=device-width, minimal-ui">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" href="images/favicon.png"/>
+    <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png') }}" />
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}"/>
 
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/layoutNew.css') }}" type="text/css"/>
