--- a/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/Celebration/list.html.twig
@@ -123,7 +123,7 @@
     </section>
 
     <section id="map" class="map_full">
-        <iframe src="http://gc-map.local"></iframe>
+        <iframe src="http://map.gospel-center.com"></iframe>
         <article>
             <h1>Gare de Lausanne</h1>
 
