--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/jura/fr/contact.html.twig
@@ -3,7 +3,7 @@
     <h1 class="titlePage"><span>Contact</span></h1>
 
     <section id="map" class="map_full">
-        <iframe src="http://gc-map.local"></iframe>
+        <iframe src="http://map.gospel-center.com"></iframe>
         <article>
             <h1>Gospel Center Jura</h1>
 
