--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/montreux/fr/bases.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/montreux/fr/bases.html.twig
@@ -1,7 +1,7 @@
 <h2 class="slogan findBase">TROUVEZ UNE BASE PRÈS DE CHEZ VOUS</h2>
 
 <section id="map" class="map_full">
-    <iframe src="http://gc-map.local"></iframe>
+    <iframe src="http://map.gospel-center.com"></iframe>
 </section>
 
 <section class="formGray">
